images convert to webp

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,9 @@ ACCESS_KEY=iike448UJ-e8
 ACCESS_TIME=24h
 REFRESH_KEY=opiuqwefopqwnefiun
 REFRESH_TIME=336h
+
+# HLS_RUN_ON=h264_videotoolbox #Mac GPU
+HLS_RUN_ON=libx264 # libx265 CPU
+# HLS_RUN_ON=h264_nvenc # hevc_nvenc # nvidia GPU
+# HLS_RUN_ON=
+# HLS_RUN_ON=h264_videotoolbox
